--- a/src/test_ayman.ipynb
+++ b/src/test_ayman.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Convert data to tensors for the model and turn labels to one hot encoding from 0 - C - 1,\n",
-    "where C is number of classes.\n",
+    "# where C is number of classes.\n",
     "\n",
     "label_to_idx = {}\n",
     "idx_to_label = {}\n",
